--- a/src/app/(pages-ts-initialized)/display/page.module.css
+++ b/src/app/(pages-ts-initialized)/display/page.module.css
@@ -2,10 +2,30 @@
   width: 100%;
   height: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  position: relative;
   & > [data-testid="tsEmbed"] {
     width: 100%;
     height: 100%;
   }
+}
+
+.menuButton {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+}
+
+.menuButtonIcon {
+  width: 75%;
+  height: 75%;
+}
+
+.modalBody {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
