--- a/src/app/(pages-ts-initialized)/configure/page.module.css
+++ b/src/app/(pages-ts-initialized)/configure/page.module.css
@@ -17,7 +17,8 @@
 .form {
   width: 100%;
   display: flex;
-  flex-direction: column;
-  gap: 0.75rem;
+  flex-direction: row;
+  align-items: flex-end;
   text-align: left;
+  gap: 0.75rem;
 }
